inin_cluster/cVO_summit_drone/k8s_deployment/foxglove-zenoh_vo2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fxg-zenoh-bridges-vo2
spec:
  replicas: 1
  selector:
    matchLabels:
      name: foxglove-zenoh-bridges-vo2
  template:
    metadata:
      name: foxglove-zenoh-bridges-vo2
      labels:
        name: foxglove-zenoh-bridges-vo2
    spec:
      volumes:
        - name: foxglove-config-vo2
          configMap:
            name: foxglove-demo-vo2
            items:
            - key: default-layout.json
              path: default-layout.json
      hostname: "foxglove-zenoh-bridges-vo2"
      hostAliases:
      - ip: "127.0.0.1"
        hostnames:
        - "foxglove-zenoh-bridges-vo2"
      containers:
      - name: foxglove-zenoh-bridges-vo2-container       
        #image: robopaas/foxglove-zenoh-bridge-summit
        image: robopaas/foxglove-zenoh-bridge-summit:210125
        imagePullPolicy: Always
        resources:
          requests:
            memory: "256Mi"
            cpu: "1"
          limits:
            memory: "512Mi"
            cpu: "1"        
        command:
         - /run_bridge.sh
        ports:
        - containerPort: 8765
          name: fxg-ws
        - containerPort: 8080
          name: fxg-std
        securityContext:
          capabilities:
            add:
              - NET_ADMIN
          privileged: true
      - name: fxg-std    
        image: robopaas/foxglove-studio:latest #ghcr.io/foxglove/studio:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "256Mi"
            cpu: "1"
          limits:
            memory: "512Mi"
            cpu: "1"      
        ports:
        - containerPort: 8080
          name: fxg-std
        volumeMounts:
        - name: foxglove-config-vo2
          mountPath: /foxglove/default-layout.json
          subPath: default-layout.json
        securityContext:
          capabilities:
            add:
              - NET_ADMIN
          privileged: true
---
apiVersion: v1
kind: Service
metadata:
  name: foxglove-zenoh-bridges-vo2
spec:
  clusterIP: None
  ports:
    - name: fxg-ws
      port: 8765
      protocol: TCP
    - name: webgui
      port: 8080
      targetPort: 8080
  selector:
    name: foxglove-zenoh-bridges-vo2
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foxglove-zenoh-bridges-vo2-ingress
  labels:
    name: foxglove-zenoh-bridges-vo2
spec:
  rules:
  - host: bridges-vo2.robopaas.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: foxglove-zenoh-bridges-vo2
            port:
              number: 8765
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foxglove-ingress-vo2
  labels:
    name: foxglove-zenoh-bridges-vo2
spec:
  rules:
  - host: foxglove-demo-vo2.robopaas.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: foxglove-zenoh-bridges-vo2
            port:
              number: 8080
---
